# CLTranscriptor

./: LICENSE  README.md  setup.cfg
src/: cltranscriptor.py
src/cltranscriptor/: cltranscriptor.py
