[metadata]
name = CLTranscriptor
version = 0.0.6
author = Danner Schlotterbeck Mendez
author_email = danner.schmen@ciae.uchile.cl
description = Wav2Vec2-based transcriptor fine tuned on chilean lessons
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dannersm/CLTranscriptor
project_urls =
    Bug Tracker = https://github.com/dannersm/CLTranscriptor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    librosa
    numpy
    transformers
    torch
    pyspellchecker
    tqdm

[options.packages.find]
where = src